Fix header z-index bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@ $weeks-container-width: 350px;
     color: white;
     height: 70px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 10;
   }
   .main-container {
     margin-top: 70px;
